datasets/dataset_txt/django_rest_framework/django_rest_framework_1291.txt
bussiere commented on 13 Feb 2016
  File "/home/boulot/miniconda3/conda-bld/test-tmp_dir/run_test.py", line 28
    import rest_framework/authtoken
                         ^
SyntaxError: invalid syntax
TESTS FAILED: djangorestframework-3.3.2-py35_0
Regards and thanks